--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+<br><br>
+<div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th><%= link_to "Products", "admin/products" %></th>
+          <th><%= link_to "Categories", "admin/products" %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= @product_count %></td>
+          <td><%= @category_count %></td>
+        </tr>
+      </tbody>
+    </table>
+</div>
