--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -30,7 +30,16 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-       <li class="dropdown">
+        <li>
+      <% if current_user %>
+        <li>Signed in as <%= current_user.first_name %> <%= current_user.last_name %></li>
+        <li><%= link_to "Logout", :logout %></li>
+        <% else %>
+        <li><%= link_to 'Login', :login %></li>
+        <li> <%= link_to 'Signup', :signup %></li>
+      <% end %>
+      </li>
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
@@ -47,6 +56,7 @@
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
         </li>
+
       </ul>
     </div>
   </div>
